@@ -1,5 +1,7 @@
 devel
 -----
+* fix issue #4457: create /var/tmp/arangod with correct user in supervisor mode
+
 * fix internal issue #478: remove unused and undocumented REST API endpoints
   _admin/statistics/short and _admin/statistics/long.
   These APIs were available in ArangoDB's REST API, but have not been called by
